<resources>
    <string name="app_name"> E-Parking </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="strCamera">Fregment home </string>
    <string name="strGalary">Fregment Galary </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_qr_code_scann">QrCodeScann</string>
    <string name="title_activity_open_gate">OpenGate</string>

    <string name="title_activity_profile_nav_drawer">profile_nav_drawer</string>

    <string-array name="StrTypeOfbay">
        <item>Special Bay</item>
        <item>Normal Bay</item>
    </string-array>
    <string name="title_activity_notification_parking">Map</string>
    <string name="title_activity_near_by_parking">Map</string>
    <string name="load_credits">Load Credits</string>
    <string name="amount">Amount</string>
    <string name="load">Load</string>
    <string name="temParkingStatus">Parking Status : OUT</string>
    <string name="temParkingSubcity">"Parking Sub City : "</string>
    <string name="tempParkingInstatus">"Parking Status : "</string>
    <string name="temParkingTimeStamp">"Time Stamp : "</string>
    <string name="date_time">Date time</string>
    <string name="parking_fee">Parking fee</string>
    <string name="search">Search</string>
    <string name="parking_city">Parking City</string>
    <string name="parking_feee">Parking fee</string>
    <string name="date_of_parking">Date of Parking</string>
    <string name="parking_name">Parking Name</string>


</resources>
