<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/load_credits"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_amount"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:background="@drawable/rightroundcolor"
        android:gravity="center"
        android:hint="@string/amount"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btn_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/load" />

</LinearLayout>