<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coners"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_parkingName_parkingList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ParkingImage"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="41dp"
        android:layout_toEndOf="@+id/ParkingImage"
        android:text="@string/parking_name"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/ParkingImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_local_parking_black_24dp" />

    <TextView
        android:id="@+id/tv_parkingCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_parkingName_parkingList"
        android:layout_below="@+id/tv_parkingName_parkingList"
        android:layout_marginBottom="2dp"
        android:text="@string/parking_city" />

    <TextView
        android:id="@+id/tv_dateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_parkingCity"
        android:layout_below="@+id/tv_parkingCity"
        android:layout_marginBottom="2dp"
        android:text="@string/date_of_parking" />

    <TextView
        android:id="@+id/tv_paidAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_parkingCity"
        android:layout_below="@+id/tv_dateTime"
        android:layout_marginBottom="2dp"
        android:text="@string/parking_feee" />
</RelativeLayout>